# knight-probability

./: .gitignore  Dockerfile  compose.yml  pyproject.toml  readme.md  requirements.txt
src/: knight_probability.py  streamlit_app.py  test_knight_probabilities.py
